syntax = "proto3";

package test;

import "studentpb/student.proto";

option go_package = "dasalgadoc.com/go-gprc/testpb";

/*--Questions--*/
message Question {
  string id = 1;
  string answer = 2;
  string question = 3;
  string test_id = 4;
}

message SetQuestionResponse {
  bool ok = 1;
}

/*--Enrollment--*/
message EnrollmentRequest {
  string student_id = 1;
  string test_id = 2;
}

message GetStudentsPerTestRequest {
  string test_id = 1;
}

/*--Test--*/
message Test {
  string id = 1;
  string name = 2;
}

message GetTestRequest {
  string id = 1;
}

message SetTestResponse {
  string id = 1;
  string name = 2;
}

service TestService {
  rpc GetTest(GetTestRequest) returns (Test);
  rpc SetTest(Test) returns (SetTestResponse);
  // Server receives a stream
  rpc SetQuestions(stream Question) returns (SetQuestionResponse);
  rpc EnrollStudents(stream EnrollmentRequest) returns (SetQuestionResponse);
  rpc GetStudentsPerTest(GetStudentsPerTestRequest) returns (stream student.Student);
}
